# customer-churn-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  pyproject.toml
data/raw/: customer_churn.csv.dvc
scripts/: run_data_pipeline.py  run_preprocessing.py  test_config.py  test_ingestion.py  test_logger.py  test_splitter.py  test_validation.py
scripts/dev/: test_evaluator.py  test_model_factory.py  test_pipeline.py  test_preprocessing.py  test_trainer.py
src/customer_churn_mlops/common/: config.py  constants.py  exceptions.py  logger.py  paths.py
src/customer_churn_mlops/data/: ingestion.py  loader.py  splitter.py  validation.py
src/customer_churn_mlops/features/: pipeline.py  preprocessing.py
src/customer_churn_mlops/schemas/: dataset_schema.yaml
src/customer_churn_mlops/training/: evaluator.py  model_factory.py  preprocessor.py  trainer.py
storage/: feature_names.json  preprocessor.pkl
