[project]
name = "customer-churn-mlops"
version = "0.1.0"
description = "End-to-End MLOps Project"
authors = [
    { name = "Narasimha Jetty", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "pydantic>=2.13,<3.0",
    "pydantic-settings>=2.14,<3.0",
    "python-dotenv>=1.2,<2.0",
    "loguru>=0.7,<0.8",
    "pyyaml>=6.0,<7.0",
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.5.1,<3.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
]

[tool.poetry]
packages = [
    { include = "customer_churn_mlops", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff>=0.15,<0.16",
    "pytest>=9.1,<10.0",
    "pytest-cov>=7.1,<8.0",
    "pre-commit>=4.6,<5.0",
    "ipykernel>=7.3,<8.0",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]

# ------------------------------------------------------------------------------
# Ruff
# ------------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ------------------------------------------------------------------------------
# Pytest
# ------------------------------------------------------------------------------

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

# ------------------------------------------------------------------------------
# Coverage
# ------------------------------------------------------------------------------

[tool.coverage.run]
source = ["customer_churn_mlops"]

[tool.coverage.report]
show_missing = true
skip_covered = true
